data/derived/comb/progs/unify/prog0762.ml.out
Characters 56-57:
  | h::t -> h :: t :: l;;
                 ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
